--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <!-- html table generated in R 3.1.0 by xtable 1.7-3 package -->
 
-<!-- Sun Jun 22 01:23:34 2014 -->
+<!-- Sun Jun 22 01:36:53 2014 -->
 
 <TABLE border=1>
 <TR> <TH>  </TH> <TH> Nom </TH> <TH> Prénom </TH> <TH> Nuance </TH> <TH> Voix </TH> <TH> Nom.1 </TH> <TH> Prénom.1 </TH> <TH> Nuance.1 </TH> <TH> Voix.1 </TH>  </TR>
@@ -108,7 +108,20 @@ for (i in 1:length(nuances)) {
     <h2>Example</h2>
   </hgroup>
   <article>
-    
+    <p>An example dataset can be downloaded <a href="https://raw.githubusercontent.com/joelgombin/DataProductsPres/gh-pages/data/Canto%2004%20R%C3%A9sultats%20Can%20%20FE%20T1.csv">here</a>.</p>
+
+<ul>
+<li>Go to <a href="http://www.joelgombin.fr:3838/shiny/LireMinInterieurEng/">the app</a>.</li>
+<li>Upload the file.</li>
+<li>Field separators are semi-colons; decimal separators are commas.</li>
+<li>Load the dataset.</li>
+<li>Keep the <code>Code.du.département, Code.du.canton, Inscrits, Abstentions, Votants, Blancs.et.nuls, Exprimés</code> columns. You shouldn&#39;t need to rename them.</li>
+<li>The first column with political labels is called <code>Nuance</code>. </li>
+<li>There are 8 columns between each political label column.</li>
+<li>There is 1 column between the political labels and the vote count.</li>
+<li>Press the <code>process file button</code>, switch to the <code>File after processing</code> tab, <em>et voilà</em> !</li>
+</ul>
+
   </article>
   <!-- Presenter Notes -->
 </slide>
